--- a/Lawnmower/Lawnmower/Resources/layout/Main.axml
+++ b/Lawnmower/Lawnmower/Resources/layout/Main.axml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     >
   <TextView
+    android:id="@+id/testText"
     android:layout_width="match_parent"
     android:layout_height="20dp"
     android:text="Test" />
