--- a/Resources/layout/JobList.axml
+++ b/Resources/layout/JobList.axml
@@ -5,4 +5,10 @@
     android:layout_height="match_parent">
     <include
         layout="@layout/Toolbar" />
+
+  <ListView
+    android:id="@+id/JobList"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:background="#FF00FF" />
 </LinearLayout>
