--- a/Resources/layout/JobList.axml
+++ b/Resources/layout/JobList.axml
@@ -5,4 +5,11 @@
     android:layout_height="match_parent">
     <include
         layout="@layout/Toolbar" />
+  <TextView
+       android:text=" "
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:id="@+id/msgText"
+       android:textAppearance="?android:attr/textAppearanceMedium"
+       android:padding="10dp" />
 </LinearLayout>
