AS - Added fragments and their activities

--- a/Resources/layout/Toolbar.axml
+++ b/Resources/layout/Toolbar.axml
@@ -10,17 +10,17 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="left"
+        android:layout_gravity="left|center_vertical"
         android:paddingLeft="@dimen/toolbar_padding"
         android:text="DML"
         android:textSize="24sp" />
-    <TextView
+    <ImageView
         android:id="@+id/AddJobButton"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_weight="1"
-        android:layout_gravity="right"
+        android:layout_gravity="right|center_vertical"
         android:paddingRight="@dimen/toolbar_padding"
         android:gravity="right"
-        android:text="X"/>
+        android:src="@drawable/add"/>
 </LinearLayout>
