--- a/Resources/layout/AddJobFragment.axml
+++ b/Resources/layout/AddJobFragment.axml
@@ -1,16 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:background="@color/bedazzled_blue"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:text="Open: "
-        android:textSize="20sp" />
-    <Button
-        android:id="@+id/MainButton"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:text="Main" />
+    android:layout_height="match_parent"
+    android:padding="20dp">
+  <TextView
+    android:layout_width="match_parent"
+    android:layout_height="45dp"
+    android:text="First Name"
+    android:textSize="20dp"/>
+  <EditText
+    android:id="@+id/FirstNameEdit"
+    android:layout_width="match_parent"
+    android:layout_height="45dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginBottom="20dp"/>
+  <TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Last Name"
+    android:textSize="20dp"/>
+  <EditText
+    android:id="@+id/LastNameEdit"
+    android:layout_width="match_parent"
+    android:layout_height="45dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"/>
 </LinearLayout>
