--- a/Resources/layout/JobListItem.axml
+++ b/Resources/layout/JobListItem.axml
@@ -13,14 +13,16 @@
     <TextView
       android:id="@+id/FirstNameTextView"
       android:layout_height="match_parent"
-      android:layout_width="match_parent"
+      android:layout_width="0dp"
+      android:layout_weight="1"
       android:textSize="20dp"
       android:text="FirstName"/>
 
     <TextView
       android:id="@+id/LastNameTextView"
       android:layout_height="match_parent"
-      android:layout_width="match_parent"
+      android:layout_width="0dp"
+      android:layout_weight="1"
       android:textSize="20dp"
       android:text="LastName"/>
     
