--- a/Resources/layout/JobList.axml
+++ b/Resources/layout/JobList.axml
@@ -20,4 +20,10 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_margin="30dp"/>
+  <fragment
+      android:name="lawnmower.AssignJobActivity"
+      android:id="@+id/AssignJobMenu"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_margin="30dp"/>
 </FrameLayout>
