job_list_UI -- Made changes to toolbar. Need to revisit later.

--- a/Resources/layout/Login.axml
+++ b/Resources/layout/Login.axml
@@ -39,5 +39,5 @@
     android:text="Login"
     android:textSize="@dimen/login_button_text_size"
     android:background="@color/white"
-    android:textColor="@color/toolbar_gray"/>
+    android:textColor="@color/gray1"/>
 </LinearLayout>
