--- a/Resources/layout/JobList.axml
+++ b/Resources/layout/JobList.axml
@@ -12,18 +12,18 @@
           android:id="@+id/JobList"
           android:layout_height="match_parent"
           android:layout_width="match_parent"
-          android:background="#FF0000" />
+          android:background="@color/bedazzled_blue" />
   </LinearLayout>
   <fragment
       android:name="lawnmower.AddJobActivity"
       android:id="@+id/AddJobMenu"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:layout_margin="30dp"/>
+      android:layout_margin="@dimen/fragment_margin"/>
   <fragment
       android:name="lawnmower.AssignJobActivity"
       android:id="@+id/AssignJobMenu"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:layout_margin="30dp"/>
+      android:layout_margin="@dimen/fragment_margin"/>
 </FrameLayout>
