--- a/Resources/layout/JobListItem.axml
+++ b/Resources/layout/JobListItem.axml
@@ -1,46 +1,156 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="vertical">
-  <LinearLayout
-    android:layout_height="60dp"
+  android:orientation="vertical"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content">
+  
+  <TextView
+    android:id="@+id/AssignedText"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_marginBottom="10dp"
+    android:paddingTop="@dimen/job_item_assign_padding"
+    android:paddingBottom="@dimen/job_item_assign_padding"
+    android:text="Unassigned"
+    android:textSize="@dimen/job_item_text_size"
+    android:gravity="right|center_horizontal"
+    android:paddingRight="20dp"
+    android:background="@color/off_white"/>
+  
+  <LinearLayout
+    android:id="@+id/EverythingLayout"
     android:orientation="horizontal"
-    android:background="@android:color/holo_purple">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white">
+    <LinearLayout
+      android:id="@+id/InfoLayout"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:orientation="vertical">  
+      <LinearLayout
+        android:id="@+id/NameHolder"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_marginBottom="@dimen/job_view_bottom_margin"
+        android:paddingTop="@dimen/job_item_padding"
+        android:paddingLeft="@dimen/job_item_text_padding_left"
+        android:orientation="horizontal">
 
-    <TextView
-      android:id="@+id/FirstNameTextView"
-      android:layout_height="match_parent"
+        <TextView
+          android:id="@+id/FirstNameTextView"
+          android:layout_height="wrap_content"
+          android:layout_width="wrap_content"
+          android:layout_marginRight="10dp"
+          android:textSize="@dimen/job_item_text_size"
+          android:text="FirstName"/>
+
+        <TextView
+          android:id="@+id/LastNameTextView"
+          android:layout_height="wrap_content"
+          android:layout_width="wrap_content"
+          android:textSize="@dimen/job_item_text_size"
+          android:text="LastName"/>
+      </LinearLayout>
+
+      <TextView
+        android:id="@+id/AddressText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/job_item_text_padding_left"
+        android:layout_marginBottom="@dimen/job_view_bottom_margin"
+        android:text="Address"
+        android:textSize="@dimen/job_item_text_size"/>
+
+      <TextView
+        android:id="@+id/ContactText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/job_item_text_padding_left"
+        android:layout_marginBottom="@dimen/job_view_bottom_margin"
+        android:text="Contact Number"
+        android:textSize="@dimen/job_item_text_size"/>
+
+      <TextView
+        android:id="@+id/JobTypeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/job_item_text_padding_left"
+        android:layout_marginBottom="@dimen/job_view_bottom_margin"
+        android:text="Job Type"
+        android:textSize="@dimen/job_item_text_size"/>
+
+      <TextView
+        android:id="@+id/JobDayText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/job_item_text_padding_left"
+        android:layout_marginBottom="@dimen/job_view_bottom_margin"
+        android:text="Job Day"
+        android:textSize="@dimen/job_item_text_size"/>
+
+      <TextView
+        android:id="@+id/JobDateText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/job_item_text_padding_left"
+        android:layout_marginBottom="@dimen/job_view_bottom_margin"
+        android:text="Job Date"
+        android:textSize="@dimen/job_item_text_size"/>
+
+      <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/job_item_padding"
+        android:paddingLeft="@dimen/job_item_text_padding_left">
+        <TextView
+          android:id="@+id/RepeatingText"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="@dimen/job_view_bottom_margin"
+          android:layout_marginRight="10dp"
+          android:text="Repeating"
+          android:textSize="@dimen/job_item_text_size"/>
+
+        <TextView
+          android:id="@+id/RepeatingXText"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="@dimen/job_view_bottom_margin"
+          android:text="X"
+          android:textSize="@dimen/job_item_text_size"/>
+      </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+      android:id="@+id/ButtonsLayout"
+      android:orientation="vertical"
       android:layout_width="0dp"
       android:layout_weight="1"
-      android:textSize="20dp"
-      android:text="FirstName"/>
-
-    <TextView
-      android:id="@+id/LastNameTextView"
-      android:layout_height="match_parent"
-      android:layout_width="0dp"
-      android:layout_weight="1"
-      android:textSize="20dp"
-      android:text="LastName"/>
+      android:layout_height="wrap_content"
+      android:layout_marginRight="@dimen/job_item_text_padding_left"
+      android:gravity="right">
+      <ImageView
+        android:id="@+id/DirectionsImage"
+        android:layout_width="@dimen/job_item_icon_size"
+        android:layout_height="@dimen/job_item_icon_size"
+        android:src="@drawable/directions"/>
+      <ImageView
+        android:id="@+id/NotepadImage"
+        android:layout_width="@dimen/job_item_icon_size"
+        android:layout_height="@dimen/job_item_icon_size"
+        android:src="@drawable/notepad"/>
+      <ImageView
+        android:id="@+id/DeleteImage"
+        android:layout_width="@dimen/job_item_icon_size"
+        android:layout_height="@dimen/job_item_icon_size"
+        android:src="@drawable/delete"/>
     
+    </LinearLayout>
   </LinearLayout>
-
-  <LinearLayout
-    android:layout_height="60dp"
-    android:layout_width="match_parent"
-    android:layout_marginBottom="10dp"
-    android:orientation="horizontal"
-    android:background="@android:color/holo_purple">
-
-    <TextView
-      android:id="@+id/AddressTextView"
-      android:layout_height="match_parent"
-      android:layout_width="match_parent"
-      android:textSize="20dp"
-      android:text="Address"/>
-
-  </LinearLayout>
+  <View
+        android:layout_height="0.5dp"
+        android:layout_width="match_parent"
+        android:background="@color/gray2"/>
 </LinearLayout>
