--- a/Resources/layout/JobList.axml
+++ b/Resources/layout/JobList.axml
@@ -14,16 +14,15 @@
           android:layout_width="match_parent"
           android:background="@color/bedazzled_blue" />
   </LinearLayout>
+  
   <fragment
       android:name="lawnmower.AddJobActivity"
       android:id="@+id/AddJobMenu"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_margin="@dimen/fragment_margin"/>
+      android:layout_height="match_parent"/>
   <fragment
       android:name="lawnmower.AssignJobActivity"
       android:id="@+id/AssignJobMenu"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_margin="@dimen/fragment_margin"/>
+      android:layout_height="match_parent"/>
 </FrameLayout>
