--- a/Resources/layout/JobList.axml
+++ b/Resources/layout/JobList.axml
@@ -23,6 +23,7 @@
   <fragment
       android:name="lawnmower.AssignJobActivity"
       android:id="@+id/AssignJobMenu"
+      android:layout_gravity="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
 </FrameLayout>
