--- a/Resources/layout/AddJobFragment.axml
+++ b/Resources/layout/AddJobFragment.axml
@@ -12,7 +12,7 @@
       android:layout_margin="@dimen/fragment_margin"
       android:layout_gravity="center"
       android:gravity="center"
-      android:padding="@dimen/add_job_fragment_padding">
+      android:padding="@dimen/fragment_padding">
     
       <LinearLayout
         android:id="@+id/NameEditHolder"
@@ -117,7 +117,7 @@
           android:layout_height="match_parent"
           android:layout_width="wrap_content"
           android:gravity="center"
-          android:textSize="@dimen/add_job_text_size"
+          android:textSize="@dimen/fragment_text_size"
           android:text=" " />
       </LinearLayout>
 
@@ -130,7 +130,7 @@
       <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/add_job_text_size"
+        android:textSize="@dimen/fragment_text_size"
         android:text="Notes"
         android:layout_marginBottom="@dimen/add_job_inside_margin" />
       
