--- a/Resources/layout/Login.axml
+++ b/Resources/layout/Login.axml
@@ -10,7 +10,7 @@
     android:background="@drawable/loginGradient">
   <ImageView
     android:id="@+id/Logo"
-    android:layout_height="200dp"
+    android:layout_height="@dimen/front_page_logo_height_width"
     android:layout_width="@dimen/login_control_width"
     android:src="@drawable/dml"/>
   <EditText
