--- a/Resources/layout/Login.axml
+++ b/Resources/layout/Login.axml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent">
+  <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,44 +11,50 @@
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
     android:background="@drawable/loginGradient">
-  <ImageView
-    android:id="@+id/Logo"
-    android:layout_height="@dimen/front_page_logo_height_width"
-    android:layout_width="@dimen/login_control_width"
-    android:src="@drawable/dml"/>
-  <EditText
-    android:id="@+id/UsernameEdit"
-    android:layout_height="wrap_content"
-    android:layout_width="@dimen/login_control_width"
-    android:layout_margin="20dp"
-    android:padding="@dimen/login_edit_padding"
-    android:background="@drawable/editTextBox"
-    android:hint="Username"
-    android:singleLine="true"/>
-  <EditText
-    android:id="@+id/PasswordEdit"
-    android:layout_height="wrap_content"
-    android:layout_width="@dimen/login_control_width"
-    android:layout_marginBottom="20dp"
-    android:padding="@dimen/login_edit_padding"
-    android:background="@drawable/editTextBox"
-    android:hint="Password"
-    android:singleLine="true"
-    android:inputType="textPassword"/>
-  <Button
-    android:id="@+id/LoginButton"
-    android:layout_height="50dp"
-    android:layout_width="@dimen/login_control_width"
-    android:layout_margin="10dp"
-    android:text="Login"
-    android:textSize="@dimen/login_button_text_size"
-    android:background="@color/white"
-    android:textColor="@color/gray1"/>
-  <TextView
-    android:id="@+id/NewUserText"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:text="@string/new_user_text"
-    android:textSize="@dimen/login_new_user_text_size"
-    android:textColor="@color/cloudy_blue" />
-</LinearLayout>
+    <ImageView
+      android:id="@+id/Logo"
+      android:layout_height="@dimen/front_page_logo_height_width"
+      android:layout_width="@dimen/login_control_width"
+      android:src="@drawable/dml"/>
+    <EditText
+      android:id="@+id/UsernameEdit"
+      android:layout_height="wrap_content"
+      android:layout_width="@dimen/login_control_width"
+      android:layout_margin="20dp"
+      android:padding="@dimen/login_edit_padding"
+      android:background="@drawable/editTextBox"
+      android:hint="Username"
+      android:singleLine="true"/>
+    <EditText
+      android:id="@+id/PasswordEdit"
+      android:layout_height="wrap_content"
+      android:layout_width="@dimen/login_control_width"
+      android:layout_marginBottom="20dp"
+      android:padding="@dimen/login_edit_padding"
+      android:background="@drawable/editTextBox"
+      android:hint="Password"
+      android:singleLine="true"
+      android:inputType="textPassword"/>
+    <Button
+      android:id="@+id/LoginButton"
+      android:layout_height="50dp"
+      android:layout_width="@dimen/login_control_width"
+      android:layout_margin="10dp"
+      android:text="Login"
+      android:textSize="@dimen/login_button_text_size"
+      android:background="@color/white"
+      android:textColor="@color/gray1"/>
+    <TextView
+      android:id="@+id/NewUserText"
+      android:layout_height="wrap_content"
+      android:layout_width="wrap_content"
+      android:text="@string/new_user_text"
+      android:textSize="@dimen/login_new_user_text_size"
+      android:textColor="@color/cloudy_blue" />
+  </LinearLayout>
+  <fragment
+    android:name="lawnmower.AlertBoxActivity"
+    android:id="@+id/AlertBoxFragment"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/alert_box_height"/>
+</FrameLayout>
