--- a/Resources/layout/JobListItem.axml
+++ b/Resources/layout/JobListItem.axml
@@ -135,17 +135,21 @@
         android:id="@+id/DirectionsImage"
         android:layout_width="@dimen/job_item_icon_size"
         android:layout_height="@dimen/job_item_icon_size"
+        android:layout_marginBottom="@dimen/job_item_button_margin_bottom"
+        android:layout_marginTop="@dimen/job_item_button_margin_bottom"
         android:src="@drawable/directions"/>
       <ImageView
         android:id="@+id/NotepadImage"
         android:layout_width="@dimen/job_item_icon_size"
         android:layout_height="@dimen/job_item_icon_size"
-        android:src="@drawable/directions"/>
+        android:layout_marginBottom="@dimen/job_item_button_margin_bottom"
+        android:src="@drawable/notepad"/>
       <ImageView
         android:id="@+id/DeleteImage"
         android:layout_width="@dimen/job_item_icon_size"
         android:layout_height="@dimen/job_item_icon_size"
-        android:src="@drawable/directions"/>
+        android:layout_marginBottom="@dimen/job_item_button_margin_bottom"
+        android:src="@drawable/cancel"/>
     
     </LinearLayout>
   </LinearLayout>
