--- a/Resources/layout/AddJobFragment.axml
+++ b/Resources/layout/AddJobFragment.axml
@@ -29,7 +29,7 @@
           android:padding="@dimen/login_edit_padding"
           android:singleLine="true"
           android:background="@drawable/editTextBox"
-          android:hint="First Name"/>
+          android:hint="@string/add_job_first_name"/>
         <EditText
           android:id="@+id/LastNameEdit"
           android:layout_width="0dp"
@@ -38,7 +38,7 @@
           android:padding="@dimen/login_edit_padding"
           android:singleLine="true"
           android:background="@drawable/editTextBox"
-          android:hint="Last Name"/>
+          android:hint="@string/add_job_last_name"/>
       </LinearLayout>
     
       <EditText
@@ -49,7 +49,7 @@
         android:layout_marginBottom="@dimen/add_job_inside_margin"
         android:singleLine="true"
         android:background="@drawable/editTextBox"
-        android:hint="Address"/>
+        android:hint="@string/add_job_address"/>
 
       <LinearLayout
         android:id="@+id/AddressEditHolder"
@@ -66,7 +66,7 @@
           android:singleLine="true"
           android:background="@drawable/editTextBox"
           android:layout_marginRight="@dimen/add_job_inside_margin"
-          android:hint="City"/>
+          android:hint="@string/add_job_city"/>
         <Spinner
           android:id="@+id/StateSpinner"
           android:layout_width="0dp"
@@ -81,7 +81,7 @@
           android:padding="@dimen/login_edit_padding"
           android:singleLine="true"
           android:background="@drawable/editTextBox"
-          android:hint="Zipcode"/>
+          android:hint="@string/add_job_zipcode"/>
       </LinearLayout>
 
       <EditText
@@ -92,7 +92,7 @@
         android:padding="@dimen/login_edit_padding"
         android:singleLine="true"
         android:background="@drawable/editTextBox"
-        android:hint="Contact Number"/>
+        android:hint="@string/add_job_contact"/>
 
       <Spinner
         android:id="@+id/JobSpinner"
@@ -105,33 +105,35 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/add_job_view_height"
         android:layout_marginBottom="@dimen/add_job_inside_margin"
+        android:gravity="center"
         android:orientation="horizontal">
         <ImageView
           android:id="@+id/CalendarImage"
-          android:layout_width="@dimen/add_job_view_height"
+          android:layout_width="0dp"
           android:layout_height="match_parent"
+          android:layout_weight="2"
           android:layout_marginRight="@dimen/add_job_inside_margin"
           android:src="@drawable/calendar" />
         <TextView
           android:id="@+id/Date"
           android:layout_height="match_parent"
-          android:layout_width="wrap_content"
+          android:layout_width="0dp"
+          android:layout_weight="5"
           android:gravity="center"
           android:textSize="@dimen/fragment_text_size"
-          android:text=" " />
+          android:text="" />
+        <Spinner
+          android:id="@+id/AssignSpinner"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:layout_weight="10" />
       </LinearLayout>
-
-      <Spinner
-        android:id="@+id/AssignSpinner"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/add_job_view_height"
-        android:layout_marginBottom="@dimen/add_job_inside_margin" />
 
       <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/fragment_text_size"
-        android:text="Notes"
+        android:text="@string/add_job_notes_header"
         android:layout_marginBottom="@dimen/add_job_inside_margin" />
       
       <EditText
@@ -151,6 +153,6 @@
         android:background="@drawable/editTextBox"
         android:textSize="@dimen/add_job_text_size"
         android:textColor="@color/black"
-        android:text="Add Job" />
+        android:text="@string/add_job_create_button" />
     </LinearLayout>
 </FrameLayout>
