--- a/Resources/layout/AssignJobFragment.axml
+++ b/Resources/layout/AssignJobFragment.axml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/menuFragmentBackground"
         android:layout_margin="@dimen/fragment_margin"
+        android:layout_gravity="center"
         android:padding="@dimen/fragment_padding">
         <TextView
             android:layout_width="wrap_content"
