--- a/Resources/layout/AddJobFragment.axml
+++ b/Resources/layout/AddJobFragment.axml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/semi_solid_menu_background">
   <LinearLayout
+      android:id="@+id/AddJobLayoutHolder"
       android:orientation="vertical"
       android:background="@drawable/menuFragmentBackground"
       android:layout_width="match_parent"
