--- a/Resources/layout/JobListAdmin.axml
+++ b/Resources/layout/JobListAdmin.axml
@@ -7,7 +7,7 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <include
-          layout="@layout/Toolbar" />
+          layout="@layout/ToolbarAdmin" />
       <ListView
           android:id="@+id/JobList"
           android:layout_height="match_parent"
@@ -15,6 +15,18 @@
           android:background="@color/bedazzled_blue" />
   </LinearLayout>
   
+  <fragment
+      android:name="lawnmower.AddJobActivity"
+      android:id="@+id/AddJobMenu"
+      android:layout_gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
+  <fragment
+      android:name="lawnmower.AssignJobActivity"
+      android:id="@+id/AssignJobMenu"
+      android:layout_gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
   <fragment
       android:name="lawnmower.NotesActivity"
       android:id="@+id/NotesMenu"
