--- a/Resources/layout/JobListItemAdmin.axml
+++ b/Resources/layout/JobListItemAdmin.axml
@@ -4,6 +4,18 @@
   android:layout_width="match_parent"
   android:layout_height="wrap_content">
   
+  <TextView
+    android:id="@+id/AssignedText"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:paddingTop="@dimen/job_item_assign_padding"
+    android:paddingBottom="@dimen/job_item_assign_padding"
+    android:text="Unassigned"
+    android:textSize="@dimen/job_item_text_size"
+    android:gravity="right|center_horizontal"
+    android:paddingRight="20dp"
+    android:background="@color/off_white"/>
+  
   <LinearLayout
     android:id="@+id/EverythingLayout"
     android:orientation="horizontal"
@@ -85,6 +97,30 @@
         android:layout_marginBottom="@dimen/job_view_bottom_margin"
         android:text="Job Date"
         android:textSize="@dimen/job_item_text_size"/>
+
+      <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/job_item_padding"
+        android:paddingLeft="@dimen/job_item_text_padding_left">
+        <TextView
+          android:id="@+id/RepeatingText"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="@dimen/job_view_bottom_margin"
+          android:layout_marginRight="10dp"
+          android:text="Repeating"
+          android:textSize="@dimen/job_item_text_size"/>
+
+        <TextView
+          android:id="@+id/RepeatingXText"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="@dimen/job_view_bottom_margin"
+          android:text="X"
+          android:textSize="@dimen/job_item_text_size"/>
+      </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -109,11 +145,11 @@
         android:layout_marginBottom="@dimen/job_item_button_margin_bottom"
         android:src="@drawable/notepad"/>
       <ImageView
-        android:id="@+id/FinishImage"
+        android:id="@+id/DeleteImage"
         android:layout_width="@dimen/job_item_icon_size"
         android:layout_height="@dimen/job_item_icon_size"
         android:layout_marginBottom="@dimen/job_item_button_margin_bottom"
-        android:src="@drawable/finish"/>
+        android:src="@drawable/cancel"/>
     
     </LinearLayout>
   </LinearLayout>
