--- a/Resources/layout/Toolbar.axml
+++ b/Resources/layout/Toolbar.axml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:orientation="vertical"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content">
-  <FrameLayout
-      android:orientation="horizontal"
-      android:layout_width="match_parent"
-      android:layout_height="@dimen/toolbar_height"
-      android:gravity="center_horizontal"
-      android:background="@color/gray2">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/gray2">
     <ImageView
         android:id="@+id/Logo"
         android:layout_width="match_parent"
@@ -16,17 +11,9 @@
         android:gravity="center"
         android:paddingTop="2dp"
         android:paddingLeft="@dimen/toolbar_padding"
-        android:src="@drawable/dml"/>
-    <ImageView
-        android:id="@+id/AddJobButton"
-        android:layout_width="@dimen/toolbar_logo_height"
-        android:layout_height="@dimen/toolbar_logo_height"
-        android:paddingRight="@dimen/toolbar_padding"
-        android:layout_gravity="right"
-        android:src="@drawable/add" />
-  </FrameLayout>
-  <View
-    android:layout_height="1dp"
-    android:layout_width="match_parent"
-    android:background="@color/gray1" />
+        android:src="@drawable/dml" />
+    <View
+        android:layout_height="1dp"
+        android:layout_width="match_parent"
+        android:background="@color/gray1" />
 </LinearLayout>
