miranda's_firebase -- Added edit job fragment and the functionality of editing jobs in the database

--- a/Resources/layout/JobListAdmin.axml
+++ b/Resources/layout/JobListAdmin.axml
@@ -28,8 +28,8 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
   <fragment
-      android:name="lawnmower.NotesActivity"
-      android:id="@+id/NotesMenu"
+      android:name="lawnmower.EditJobActivity"
+      android:id="@+id/EditJobMenu"
       android:layout_gravity="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
