--- a/Resources/layout/JobListItem.axml
+++ b/Resources/layout/JobListItem.axml
@@ -30,6 +30,7 @@
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_marginRight="10dp"
+          android:textColor="@color/black"
           android:textSize="@dimen/job_item_text_size"
           android:text="FirstName"/>
 
@@ -37,6 +38,7 @@
           android:id="@+id/LastNameTextView"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
+          android:textColor="@color/black"
           android:textSize="@dimen/job_item_text_size"
           android:text="LastName"/>
       </LinearLayout>
@@ -47,6 +49,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/job_item_text_padding_left"
         android:layout_marginBottom="@dimen/job_view_bottom_margin"
+        android:textColor="@color/black"
         android:text="Address"
         android:textSize="@dimen/job_item_text_size"/>
 
@@ -56,6 +59,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/job_item_text_padding_left"
         android:layout_marginBottom="@dimen/job_view_bottom_margin"
+        android:textColor="@color/black"
         android:text="Contact Number"
         android:textSize="@dimen/job_item_text_size"/>
 
@@ -65,6 +69,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/job_item_text_padding_left"
         android:layout_marginBottom="@dimen/job_view_bottom_margin"
+        android:textColor="@color/black"
         android:text="Job Type"
         android:textSize="@dimen/job_item_text_size"/>
 
@@ -74,6 +79,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/job_item_text_padding_left"
         android:layout_marginBottom="@dimen/job_view_bottom_margin"
+        android:textColor="@color/black"
         android:text="Job Day"
         android:textSize="@dimen/job_item_text_size"/>
 
@@ -83,6 +89,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/job_item_text_padding_left"
         android:layout_marginBottom="@dimen/job_view_bottom_margin"
+        android:textColor="@color/black"
         android:text="Job Date"
         android:textSize="@dimen/job_item_text_size"/>
     </LinearLayout>
