--- a/Resources/layout/JobList.axml
+++ b/Resources/layout/JobList.axml
@@ -21,4 +21,10 @@
       android:layout_gravity="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
+  <fragment
+      android:name="lawnmower.MenuFragment"
+      android:id="@+id/MenuMenu"
+      android:layout_gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
 </FrameLayout>
