--- a/Resources/layout/JobListAdmin.axml
+++ b/Resources/layout/JobListAdmin.axml
@@ -33,4 +33,10 @@
       android:layout_gravity="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
+  <fragment
+      android:name="lawnmower.MenuFragment"
+      android:id="@+id/MenuMenu"
+      android:layout_gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
 </FrameLayout>
