--- a/Resources/layout/ToolbarAdmin.axml
+++ b/Resources/layout/ToolbarAdmin.axml
@@ -10,6 +10,13 @@
         android:gravity="center_horizontal"
         android:background="@color/gray2">
         <ImageView
+          android:id="@+id/MenuBar"
+          android:layout_width="@dimen/toolbar_logo_height"
+          android:layout_height="@dimen/toolbar_logo_height"
+          android:layout_gravity="left"
+          android:paddingLeft="@dimen/toolbar_padding"
+          android:src="@drawable/menuBar"/>
+        <ImageView
             android:id="@+id/Logo"
             android:layout_width="match_parent"
             android:layout_height="@dimen/toolbar_logo_height"
