--- a/Resources/layout/MenuFragment.axml
+++ b/Resources/layout/MenuFragment.axml
@@ -8,7 +8,7 @@
         android:id="@+id/AddJobLayoutHolder"
         android:orientation="vertical"
         android:background="@drawable/menuFragmentBackground"
-        android:layout_width="200dp"
+        android:layout_width="@dimen/menu_width"
         android:layout_height="match_parent"
         android:layout_gravity="left"
         android:padding="@dimen/fragment_padding">
@@ -16,6 +16,7 @@
         android:id="@+id/SignOutText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign Out"/>
+        android:textSize="@dimen/menu_text_size"
+        android:text="@string/menu_sign_out_text"/>
     </LinearLayout>
 </FrameLayout>
