--- a/Resources/layout/JobListItem.axml
+++ b/Resources/layout/JobListItem.axml
@@ -14,7 +14,7 @@
       android:id="@+id/InfoLayout"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_weight="1"
+      android:layout_weight="3"
       android:orientation="vertical">  
       <LinearLayout
         android:id="@+id/NameHolder"
@@ -29,7 +29,7 @@
           android:id="@+id/FirstNameTextView"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
-          android:layout_marginRight="10dp"
+          android:layout_marginRight="@dimen/job_item_name_space"
           android:textColor="@color/black"
           android:textSize="@dimen/job_item_text_size"
           android:text="FirstName"/>
@@ -99,9 +99,9 @@
       android:orientation="vertical"
       android:layout_width="0dp"
       android:layout_weight="1"
-      android:layout_height="wrap_content"
+      android:layout_height="match_parent"
       android:layout_marginRight="@dimen/job_item_text_padding_left"
-      android:gravity="right">
+      android:gravity="right|center_vertical">
       <ImageView
         android:id="@+id/DirectionsImage"
         android:layout_width="@dimen/job_item_icon_size"
