--- a/Resources/layout/JobListItemAdmin.axml
+++ b/Resources/layout/JobListItemAdmin.axml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="match_parent"
-  android:layout_height="wrap_content">
+  android:layout_height="wrap_content"
+  android:background="@color/white"
+  android:gravity="center">
   
   <TextView
     android:id="@+id/AssignedText"
@@ -22,12 +24,13 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingLeft="@dimen/job_item_text_padding_left"
     android:background="@color/white">
     <LinearLayout
       android:id="@+id/InfoLayout"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_weight="1"
+      android:layout_weight="3"
       android:orientation="vertical">  
       <LinearLayout
         android:id="@+id/NameHolder"
@@ -35,14 +38,13 @@
         android:layout_width="wrap_content"
         android:layout_marginBottom="@dimen/job_view_bottom_margin"
         android:paddingTop="@dimen/job_item_padding"
-        android:paddingLeft="@dimen/job_item_text_padding_left"
         android:orientation="horizontal">
 
         <TextView
           android:id="@+id/FirstNameTextView"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
-          android:layout_marginRight="10dp"
+          android:layout_marginRight="@dimen/job_item_name_space"
           android:textColor="@color/black"
           android:textSize="@dimen/job_item_text_size"
           android:text="FirstName"/>
@@ -60,7 +62,6 @@
         android:id="@+id/AddressText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/job_item_text_padding_left"
         android:layout_marginBottom="@dimen/job_view_bottom_margin"
         android:textColor="@color/black"
         android:text="Address"
@@ -70,7 +71,6 @@
         android:id="@+id/ContactText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/job_item_text_padding_left"
         android:layout_marginBottom="@dimen/job_view_bottom_margin"
         android:textColor="@color/black"
         android:text="Contact Number"
@@ -80,7 +80,6 @@
         android:id="@+id/JobTypeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/job_item_text_padding_left"
         android:layout_marginBottom="@dimen/job_view_bottom_margin"
         android:textColor="@color/black"
         android:text="Job Type"
@@ -90,7 +89,6 @@
         android:id="@+id/JobDayText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/job_item_text_padding_left"
         android:layout_marginBottom="@dimen/job_view_bottom_margin"
         android:textColor="@color/black"
         android:text="Job Day"
@@ -100,7 +98,6 @@
         android:id="@+id/JobDateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/job_item_text_padding_left"
         android:layout_marginBottom="@dimen/job_view_bottom_margin"
         android:textColor="@color/black"
         android:text="Job Date"
@@ -112,9 +109,9 @@
       android:orientation="vertical"
       android:layout_width="0dp"
       android:layout_weight="1"
-      android:layout_height="wrap_content"
-      android:layout_marginRight="@dimen/job_item_text_padding_left"
-      android:gravity="right">
+      android:layout_height="match_parent"
+      android:paddingRight="@dimen/job_item_text_padding_left"
+      android:gravity="right|center_vertical">
       <ImageView
         android:id="@+id/DirectionsImage"
         android:layout_width="@dimen/job_item_icon_size"
