small_cosmetic_changes - More for changing from "username" to "email"

--- a/Resources/layout/Login.axml
+++ b/Resources/layout/Login.axml
@@ -23,6 +23,7 @@
       android:layout_margin="20dp"
       android:padding="@dimen/login_edit_padding"
       android:background="@drawable/editTextBox"
+      android:inputType="textWebEmailAddress"
       android:hint="Email"
       android:singleLine="true"/>
     <EditText
